fix: format gallery title spacing

--- a/css/style.css
+++ b/css/style.css
@@ -8444,6 +8444,9 @@ body.admin-bar .header-menu-area.sticky_menu {
   width: 100%;
   height: 522px;
 }
+.blog-details-wrapper .single-post-item.format-gallery .post-meta {
+  margin-top: 20px;
+}
 .blog-details-wrapper .single-post-item .post-meta {
   margin-bottom: 20px;
 }
