--- a/sass/modules/post-card/_post-details.scss
+++ b/sass/modules/post-card/_post-details.scss
@@ -26,6 +26,11 @@
       width: 100%;
       height: 522px;
     }
+    &.format-gallery{
+      .post-meta{
+        margin-top: 20px;
+      }
+    }
     .post-meta {
       margin-bottom: 20px;
     }
